# CESAR.school-streamlit_app

./: pyproject.toml  ruff.toml
.devcontainer/: compose.yml  devcontainer.json
streamlit_app/: app.py
streamlit_app/assets/lang/: ui_labels.toml
streamlit_app/page/: home.py  por_mes.py  por_timeseries.py
streamlit_app/utils/: load.py
